--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="cabeçalho">
 			<div class="caixa">
-				<h1><img src="logo.jpg"><h1>
+				<h1><img src="img/logo.jpg"><h1>
 			</div>
 		</header>
 
@@ -21,7 +21,7 @@
 			<div class="container-texto">
 				<textarea id="input-texto" required placeholder="Digite seu texto..."></textarea>
 
-				<p id="exclamacao"><img class="img-exclamacao" src="exclamacao.jpg" alt="exclamacao"> Apenas letras minúsculas e sem acento.</p>
+				<p id="exclamacao"><img class="img-exclamacao" src="img/exclamacao.jpg" alt="exclamacao"> Apenas letras minúsculas e sem acento.</p>
 			</div>
 
 			<div class="output">
@@ -36,7 +36,7 @@
 
 
 			<div class="desenho">
-				<img src="desenho.jpg">
+				<img src="img/desenho.jpg">
 				<p class="texto1">Nenhuma mensagem encontrada</p>
 				<p class="texto2">Digite um texto que você deseja criptografar ou descriptografar.</p>
 			</div>
@@ -47,9 +47,9 @@
 				<p> Desenvolvido por Nilton Junior - 2022</p>
 			</div>
 			<div class="redesocial">
-				<a href="https://www.instagram.com/niltonjrcalmon/?hl=pt-br"><img class="instagram" src="instagram.png"></a>
-				<a href="https://www.linkedin.com/in/niltonjrcalmon/"><img class="linkedin" src="linkedin.png"></a>
-				<a href="https://github.com/niltonjrcalmon"><img class="github" src="github.png"></a> 
+				<a href="https://www.instagram.com/niltonjrcalmon/?hl=pt-br"><img class="instagram" src="img/instagram.png"></a>
+				<a href="https://www.linkedin.com/in/niltonjrcalmon/"><img class="linkedin" src="img/linkedin.png"></a>
+				<a href="https://github.com/niltonjrcalmon"><img class="github" src="img/github.png"></a> 
 			</div>
 		</footer>
 
